...
  "auth": {
    "loginTitle": "Sacrament Meeting Planner",
    "loginSubtitle": "discursos e agenda",
    "email": "E-mail",
    "password": "Senha",
    "confirmPassword": "Confirmar senha",
    "login": "Entrar",
    "logout": "Sair",
    "createAccount": "Criar conta para primeiro usuário de uma Ala",
    "createAccountButton": "Criar Conta",
    "stake": "Estaca",
    "ward": "Ala",
    "role": "Função",
    "language": "Idioma",
    "timezone": "Fuso Horário",
    "registerTitle": "Criar Conta",
...
  "roles": {
    "bishopric": "Bispado",
    "secretary": "Secretário",
    "observer": "Observador"
  },
  "tabs": {
    "home": "Início",
    "agenda": "Agendas",
    "speeches": "Discursos",
    "speechesAndPrayers": "Discursos e Orações",
    "settings": "Configurações"
  },
  "speechStatus": {
    "not_assigned": "Não designado",
    "assigned_not_invited": "Designado/Não convidado",
    "assigned_invited": "Designado/Convidado",
    "assigned_confirmed": "Designado/Confirmado",
...
